hphp/hack/test/typecheck/nonnull/nonnull_keyword.php.exp
File "nonnull_keyword.php", line 4, characters 9-15:
Cannot use `nonnull` as a type name as it is reserved (Parsing[1002])
