hphp/hack/test/typecheck/nonnull/nonnull_keyword.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

newtype nonnull = int;
